grafana/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      automountServiceAccountToken: false
      containers:
        - name: grafana
          image: grafana/grafana:13.2.3
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 1024Mi
              cpu: 500m
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: grafana-config
              mountPath: /local/grafana.ini
              subPath: grafana.ini
            - name: grafana-storage-volume
              mountPath: /var/lib/grafana
            - name: grafana-datasources
              mountPath: /local/grafana/provisioning/datasources/datasources.yaml
              subPath: datasources.yaml
            - name: grafana-dashboard-provisioning
              mountPath: /local/grafana/provisioning/dashboards/dashboards.yaml
              subPath: dashboards.yaml
            - name: grafana-dashboards-loki
              mountPath: /var/lib/grafana/dashboards
            - name: grafana-tmp
              mountPath: /tmp
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
      volumes:
        - name: grafana-config
          configMap:
            name: grafana-config
        - name: grafana-storage-volume
          persistentVolumeClaim:
            claimName: grafana
        - name: grafana-datasources
          configMap:
            name: grafana-datasources
        - name: grafana-dashboard-provisioning
          configMap:
            name: grafana-dashboard-provisioning
        - name: grafana-dashboards-loki
          configMap:
            name: grafana-dashboards-loki
        - name: grafana-tmp
          emptyDir: {}
