grafana/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  selector:
    app: grafana
  ports:
    - port: 3000
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
spec:
  rules:
    - host: grafana.ing.k3s.brickyard.whitestar.systems
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: grafana
                port:
                  number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ext
  annotations:
    external-dns.kubernetes.io/target: lfp.it.paulus.family
spec:
  tls:
    - hosts:
        - grafana.brickyard.whitestar.systems
      secretName: grafana-brickyard-whitestar-systems-cert
  rules:
    - host: grafana.brickyard.whitestar.systems
      http:
        paths:
          - backend:
              service:
                name: grafana
                port:
                  number: 3000
            path: /
            pathType: Prefix
